--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
 		"bootstrap": "^3.3.7",
 		"cors": "^2.8.5",
 		"express": "^4.15.0",
+		"faker": "^4.1.0",
 		"mongodb": "^3.3.5",
 		"mongoose": "^5.7.12",
 		"mysql": "^2.13.0",
 		"node-fetch": "^2.6.0",
 		"nodemon": "^2.0.1",
 		"path": "^0.12.7",
+		"pg": "^7.15.0",
 		"react": "^16.8.0",
 		"react-dom": "^16.8.0"
 	},
