--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"body-parser": "^1.17.2",
 		"bootstrap": "^3.3.7",
 		"cors": "^2.8.5",
+		"csv-writer": "^1.5.0",
 		"express": "^4.15.0",
 		"faker": "^4.1.0",
 		"loadtest": "^4.0.0",
