--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@material-ui/core": "^4.7.1",
 		"@material-ui/icons": "^4.5.1",
 		"@material-ui/lab": "^4.0.0-alpha.34",
+		"artillery": "^1.6.0-29",
 		"axios": "^0.19.0",
 		"body-parser": "^1.17.2",
 		"bootstrap": "^3.3.7",
