--- a/artillery.yml
+++ b/artillery.yml
@@ -1,12 +1,9 @@
 config:
   target: 'http://localhost:4001'
   phases:
-    - duration: 60
-      arrivalRate: 100
-  defaults:
-    headers:
-      x-my-service-auth: '987401838271002188298567'
+    - duration: 5
+      arrivalRate: 1
 scenarios:
   - flow:
-    - get:
-        url: "/m_getOneProduct"
+    - post:
+        url: "/p_createItem"
